fixed shop mobile spacing bug

--- a/src/pages/Shop/Shop.scss
+++ b/src/pages/Shop/Shop.scss
@@ -36,7 +36,7 @@
 
     &__products-list {
       grid-template-columns: 1fr;
-      row-gap: 7rem;
+      row-gap: 10rem;
     }
   }
 }
